Fixed bottom align for sponsor images, class of slack link

--- a/static/benchmarks/css/competition.sass
+++ b/static/benchmarks/css/competition.sass
@@ -34,6 +34,9 @@ section#competition
   .stimulus_sample
     height: 50px
 
+.contact-link
+  font-weight: 700
+
 span.bold-emphasis
   font-weight: 700
 
